--- a/index.css
+++ b/index.css
@@ -140,8 +140,9 @@ body {
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .container {
-    padding: 10px;
+  .container-item {
+    flex-direction: column;
+    gap: 20px;
   }
 
   .service-img img {
@@ -150,20 +151,16 @@ body {
 
   }
 
-  .accordion {
-    font-size: 14px;
-    padding: 15px;
-  }
-
-  .container-item-service img {
+  .container-item-service,
+  .img-banner {
     width: 100%;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    margin-left: 0;
+    max-width: none;
+    margin: 0;
   }
 
-  .panel {
-    padding: 0 15px;
+  .img-banner img {
+    margin-left: 0;
+    width: 100%;
+    object-fit: cover;
   }
 }
