--- a/index.css
+++ b/index.css
@@ -130,6 +130,7 @@ body {
     width: 100%;
     max-width: none;
     margin: 0;
+    margin-top: 20px;
   }
 
   .img-banner img {
@@ -156,6 +157,7 @@ body {
     width: 100%;
     max-width: none;
     margin: 0;
+    margin-top: 20px;
   }
 
   .img-banner img {
